Fixed overflow

--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -10,6 +10,7 @@
     justify-content: space-between;
     align-items: center;
     user-select: none;
+	max-width: 100vw;
     @media (max-width:$breakpoint-tablet) {
         z-index: 99;
         width: 100%;
@@ -30,12 +31,23 @@
     }
     .social{
         display: flex;
+		justify-content: space-around;
+		width: 30%;
         a{
-            margin: 5%;
+            margin-right: 0.5rem;
             color: white;
             transition: all 0.5s ease-in-out;
             svg{
-				height: 5.2rem;
+				height: 1.8rem;
+				width: 1.8rem;
+				@media (min-width:$breakpoint-phone) {
+					height: 2.5rem;
+					width: 2.5rem;
+				}
+				@media (min-width:$breakpoint-laptop) {
+					height: 5.2rem;
+					width: 5.2rem;
+				}
             }
             &:hover{
                 color:white;
